--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,14 +14,19 @@ jobs:
         environment: staging
         steps:
             - name: Log in to Docker Hub
-              run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+              env:
+                  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+                  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+              run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
             - name: Pull Docker image
+              env:
+                  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
               run: |
-                  docker pull ${{ secrets.DOCKER_USERNAME }}/hrs-api:uat-latest
+                  docker pull $DOCKER_USERNAME/hrs-api:uat-latest
 
             - name: Azure Login
-              uses: azure/login@v1
+              uses: azure/login@cb79c773a3cfa27f31f25eb3f677781210c9ce3d # v1.6.1
               with:
                   creds: ${{ secrets.AZURE_CREDENTIALS }}
 
@@ -38,7 +43,7 @@ jobs:
                   dotnet ef database update --connection "$MYSQL_CONN" --project HRS.API
 
             - name: Deploy container
-              uses: azure/webapps-deploy@v2
+              uses: azure/webapps-deploy@122b7ec46017e53a3f71e3a027d67550a1641f5e # v2.2.17
               with:
                   app-name: web-hrs-api-uat
                   images: ${{ secrets.DOCKER_USERNAME }}/hrs-api:uat-latest
